[package]
name = "shape_drawing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_prototype_lyon = "0.5"
bevy_egui = "0.14"
bevy-web-resizer = "2.0.0"
iyes_loopless = "0.6.0"
bevy_mod_picking = {path = "../bevy_mod_picking"}
bevy_mod_debugdump = "0.4.0"