[package]
name = "shape_drawing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_prototype_lyon = "0.6"
bevy_egui = "0.15"
bevy-web-resizer = "3.0.0"
iyes_loopless = "0.7"
bevy_mod_picking = {git = "https://github.com/Redwoodstudio/bevy_mod_picking"}
bevy_mod_raycast = "0.6"
# bevy_mod_debugdump = "0.4.0"
# bevy-inspector-egui = "0.11.0"
itertools = "0.10"