[package]
name = "shape_drawing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_prototype_lyon = "0.7.2"
bevy_egui = "0.18.0"
bevy-web-resizer = "4.0.1"
iyes_loopless = "0.9.1"
bevy_mod_picking = {git = "https://github.com/Redwoodstudio/bevy_mod_picking"}
# bevy_mod_picking = "0.11.0"
bevy_mod_raycast = "0.7.0"
bevy_mod_debugdump = "0.6.0"
# bevy-inspector-egui = "0.11.0"
itertools = "0.10"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }